Update SCSS variables

--- a/src/lib/styles/variables.scss
+++ b/src/lib/styles/variables.scss
@@ -1,11 +1,10 @@
 $white: #FFFFFF;
-$light-grey: #EEEEEE;
+$light-grey: #EBEBEB;
 $mid-grey: #DDDDDD;
-$grey: #555555;
+$grey: #484848;
 $black: #000000;
-$red: #C4143B;
-$red-accent: #E9234E;
-$dark-red: #960F2D;
+$red: #DE1D3B;
+$red-accent: #EE1032;
 
 $lg-gutter: 50px;
 $rg-gutter: 30px;
@@ -13,10 +12,11 @@ $md-gutter: 20px;
 $sm-gutter: 10px;
 $xs-gutter:  5px;
 
-$title-font: "Playfair Display";
-$body-font: "Martel";
-$label-font: "Montserrat";
+$title-font: "din-2014";
+$body-font: "din-2014";
+$label-font: "din-2014";
 
+$font-light: 300;
 $font-normal: 400;
 $font-bold: 700;
 
