Update SCSS variables

--- a/src/lib/base/Hs/H1/H1.css
+++ b/src/lib/base/Hs/H1/H1.css
@@ -1,12 +1,12 @@
 h1 {
   margin: 0px;
   padding: 0px;
-  font-family: "Playfair Display";
+  font-family: "din-2014";
   font-weight: 700;
   font-size: 42px;
   line-height: 51px; }
   h1.small {
-    font-family: "Playfair Display";
+    font-family: "din-2014";
     font-weight: 700;
     font-size: 20px;
     line-height: 26px; }
