--- a/src/lib/base/Hs/H2/H2.css
+++ b/src/lib/base/Hs/H2/H2.css
@@ -1,7 +1,7 @@
 h2 {
   margin: 0px;
   padding: 0px;
-  font-family: "Playfair Display";
+  font-family: "din-2014";
   font-weight: 400;
   font-size: 32px;
   line-height: 41px; }
