--- a/src/lib/base/Hs/H3/H3.css
+++ b/src/lib/base/Hs/H3/H3.css
@@ -1,7 +1,7 @@
 h3 {
   margin: 0px;
   padding: 0px;
-  font-family: "Playfair Display";
+  font-family: "din-2014";
   font-weight: 400;
   font-size: 24px;
   line-height: 34px; }
