--- a/src/lib/base/Hs/H4/H4.css
+++ b/src/lib/base/Hs/H4/H4.css
@@ -1,7 +1,7 @@
 h4 {
   margin: 0px;
   padding: 0px;
-  font-family: "Playfair Display";
+  font-family: "din-2014";
   font-weight: 700;
   font-size: 20px;
   line-height: 26px; }
