--- a/src/lib/base/P/P.css
+++ b/src/lib/base/P/P.css
@@ -1,12 +1,13 @@
 p {
   margin: 0px 0px 10px 0px;
   padding: 0px;
-  font-family: "Martel";
+  font-family: "din-2014";
   font-weight: 400;
+  color: #484848;
   font-size: 16px;
   line-height: 24px; }
   p.italic {
-    font-family: "Playfair Display";
+    font-family: "din-2014";
     font-style: italic; }
   p i, p em {
     font-style: italic; }
@@ -14,10 +15,10 @@ p {
     font-weight: 700; }
   p a {
     display: inline-block;
-    color: #C4143B;
+    color: #DE1D3B;
     text-decoration: none; }
     p a:hover {
-      color: #E9234E;
+      color: #EE1032;
       text-decoration: underline; }
     p a i {
       margin-right: 5px; }
